--- a/app/src/styles/components/Footer.css
+++ b/app/src/styles/components/Footer.css
@@ -1,9 +1,11 @@
 #footer {
-    background-color: black;
+    background: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: 70px;
     color: rgb(202, 202, 202);
-    flex: 1;
-    bottom: 0;
+    margin-top: 5%;
 }
 
 #brand {
